@@ -1,0 +1,15 @@
+<h1>K-pop偶像大逃亡！為何眾星紛紛棄大型經紀公司，自主權之爭背後的真相</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MLFVF6vRTTY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>近年來，許多K-pop偶像選擇不再續約與大型經紀公司，理由是限制了他們的創作自由和音樂控制權。這種趨勢引起了業內人士的關注，他們認為媒體和製作的轉變使偶像們更有控制權。</p>
+<ul>
+<li>社交媒體的興起使偶像們可以直接與粉絲聯繫</li>
+<li>獨立出版商的出現使偶像們不再依賴大型經紀公司</li>
+<p></ul></p>
+<p>(G)I-dle的Soyeon最近在首爾奧林匹克體操競技場舉行的"IDOL"演唱會上驚艷粉絲，她在表演中改動了一句歌詞，說"誰能阻止我？"，暗示了她與經紀公司Cube Entertainment之間的潛在矛盾。Cube Entertainment後來表示，他們不知道表演的具體細節，但Soyeon反駁，暗示了公司內部的深層問題。</p>
+<p>音樂評論家林熙允認為，這一趨勢歸因於K-pop經紀公司和偶像之間的權力動態轉變。媒體、平台、消費習慣和製作方法的變化重新塑造了音樂人的運作方式。林熙允表示："長期以來，人們一直認為偶像需要大型經紀公司的財務支持才能保持穩定的活動，但近年來這一觀念已經受到嚴重挑戰。今天，藝人可以通過社交媒體直接與粉絲聯繫，並通過簽約小型經紀公司來管理自己的職業生涯，從而獲得更多的創作自由。"</p>
+<p>紅貝貝成員Joy也傳聞對於續約與SM娛樂感到猶豫，合同即將到期。6月，Joy公開表達了她對公司的不滿，引發了關於她未來的猜測。當粉絲在線上平台問及她的新音樂視頻的想法時，Joy回答說："嗯，他們（SM娛樂）沒有聽取我們（紅貝貝）的任何意見，只是讓我們等待。我看了音樂視頻，什麼都沒有改變。我不應該再說了，所以我會保持沉默。"</p>
+<p>其他K-pop偶像近年來也公開反對他們的經紀公司，有些甚至提起訴訟或選擇不續約。值得注意的案例包括EXO成員Baekhyun、Chen和Xiumin，他們去年對SM娛樂提起訴訟，聲稱不公平待遇，特別是在利潤分配方面。2021年，Mamamoo成員Wheein選擇不續約與RBW的專屬合同，儘管她同意繼續參與團體活動，並在不同經紀公司下追求她的個人職業生涯。</p>
+
+<p>資料來源： Korea Herald</p>
