@@ -28,3 +28,4 @@ https://www.koreaherald.com/view.php?ud=20240925050613
 https://www.koreaherald.com/view.php?ud=20240925050470
 https://www.koreaherald.com/view.php?ud=20241002050525
 https://www.koreaherald.com/view.php?ud=20241002050512
+https://www.koreaherald.com/view.php?ud=20240924050725
